[package]
name = "pcf8574"
version = "0.1.0"
edition = "2021"

[lib] 
name = "pcf8574"
path = "src/lib.rs"

[features]
default = ["esp32c3"]
esp32 = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-println/esp32"]
esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]

[dependencies]
esp-backtrace = { version = "0.14.2", features = ["exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.22.0", default-features = false }
esp-println = { version = "0.12.0", default-features = false }
log = "0.4.21"
critical-section = "1.2.0"
heapless = "0.8.0"


[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
